# backtest-lib

./: app.cfg  backtest-lib.cabal  rd.cabal
src/: Lib.hs
src/Backtest/: Backtest.hs  Config.hs  Constraint.hs  Dates.hs  Example.hs  Optimize.hs  Portfolio.hs  Query.hs  Runner.hs  Types.hs  Universe.hs
src/Backtest/Config/: CommandLine.hs  File.hs
src/Backtest/Db/: Backtest.hs  BacktestMeta.hs  Constraint.hs  HistoryVersion.hs  Holding.hs  Ids.hs  Member.hs  PriceHistory.hs  Security.hs  SecurityHistory.hs
src/Backtest/Optimize/: Weight.hs
src/Rd/: Dates.hs  Optimize.hs  Portfolio.hs  Query.hs  Types.hs  Universe.hs
src/Strat/: Skew.hs
src/Strat/Skew/: Db.hs  Types.hs
