name:                backtest-lib
version:             0.1.0.0
synopsis:            Library for running backtests
description:         Please see README.md
homepage:            https://bitbucket.org/werbitt/backtest-lib#readme
license:             None
author:              Micah Werbitt
maintainer:          micah@werbitt.net
copyright:           2016 Micah Werbitt
category:            finance
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Backtest.Types
                     , Backtest.Example
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , lens
                     , monad-logger
                     , mtl >= 2.2.1
                     , opaleye
                     , pipes
                     , postgresql-simple
                     , product-profunctors >= 0.6.3.1
                     , text >= 1.2.2.0
                     , time >= 1.5.0.1
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010

test-suite backtest-lib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , backtest-lib
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/werbitt/backtest-lib
