name:                rd
version:             0.1.0.0
synopsis:            Research and Development Backtest
description:         Please see README.md
homepage:            https://bitbucket.org/werbitt/rd#readme
license:             BSD3
license-file:        LICENSE
author:              Micah Werbitt
maintainer:          micah@werbitt.net
copyright:           2016 Micah Werbitt
category:            finance
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Rd.Types
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , opaleye
                     , postgresql-simple
                     , product-profunctors >= 0.6.3.1
  default-language:    Haskell2010

executable rd-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rd
  default-language:    Haskell2010

test-suite rd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/githubuser/rd
